--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
+      - C:/mysql:/var/lib/mysql
       - ./mhealth-incognitus-backend/mysql_scripts/:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -29,6 +30,8 @@ services:
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
       MYSQL_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    volumes:
+      - C:/Users/cristian.molinaa/.cache:/root/.cache
     depends_on:
       - mysql
 
